<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/session_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin_medium">

        <LinearLayout
            android:id="@+id/session_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/titleLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_medium"
                android:background="@color/textcolor"
                android:orientation="vertical"
                android:padding="@dimen/padding_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/padding_medium"
                        android:textColor="@color/white"
                        android:textSize="@dimen/heading_text_size"
                        tools:text="Classe :" />

                    <TextView
                        android:id="@+id/session_bookmark_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/session_bookmark_status"
                        android:padding="@dimen/padding_medium"
                        android:text="2017/2018" />
                </LinearLayout>

                <TextView
                    android:id="@+id/ClassC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin_medium"
                    android:layout_marginStart="@dimen/layout_margin_medium"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_medium">

                <TextView
                    android:id="@+id/session_subtitle"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textColor="@color/primary_text"
                    tools:text="Session Subtitle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_margin_medium"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/trackImageDrawable"
                        android:layout_width="@dimen/item_image_view_small"
                        android:layout_height="@dimen/item_image_view_small"
                        android:contentDescription="@string/item_track"
                        app:srcCompat="@drawable/sub" />

                    <TextView
                        android:id="@+id/idmat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_marginLeft="@dimen/layout_margin_large"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_large"
                        android:visibility="visible"
                        tools:text=" La matiere :" />
                    <TextView
                        android:id="@+id/matiere"
                        android:layout_width="@dimen/card_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_marginLeft="@dimen/layout_margin_large"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_large"
                        tools:text="mat" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_margin_medium"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_speaker"
                        android:layout_width="@dimen/item_image_view_small"
                        android:layout_height="@dimen/item_image_view_small"
                        android:contentDescription="@string/session_speaker_icon"
                        app:srcCompat="@drawable/ic_speaker_black_24dp" />

                    <TextView
                        android:id="@+id/idprof"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_marginLeft="@dimen/layout_margin_large"
                        android:layout_toRightOf="@id/icon_speaker"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_large"
                        tools:text="le prof de matiére:" />
                    <TextView
                        android:id="@+id/prof"
                        android:layout_width="@dimen/card_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_marginLeft="@dimen/layout_margin_large"
                        android:layout_toRightOf="@id/icon_speaker"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_large"
                        tools:text="prof" />

                    <TextView
                        android:id="@+id/session_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/session_status_margin"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_margin_medium"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/item_image_view_small"
                        android:layout_height="@dimen/item_image_view_small"
                        android:contentDescription="@string/session_calender_icon"
                        app:srcCompat="@drawable/ic_date_range_black_24dp" />

                    <TextView
                        android:id="@+id/deb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_large"
                        tools:text="la séance commence :" />

                    <TextView
                        android:id="@+id/start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/layout_margin_large"
                        android:layout_marginStart="@dimen/layout_margin_large"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_large"
                        tools:text="start" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_margin_medium"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/item_image_view_small"
                        android:layout_height="@dimen/item_image_view_small"
                        android:contentDescription="@string/session_clock_icon"
                        app:srcCompat="@drawable/ic_schedule_black_24dp" />

                    <TextView
                        android:id="@+id/fin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/layout_margin_large"
                        android:layout_marginStart="@dimen/layout_margin_large"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_large"
                        tools:text="Jusqu'a" />
                    <TextView
                        android:id="@+id/end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/layout_margin_large"
                        android:layout_marginStart="@dimen/layout_margin_large"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_large"
                        tools:text="123" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_margin_medium"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_location"
                        android:layout_width="@dimen/item_image_view_small"
                        android:layout_height="@dimen/item_image_view_small"
                        android:contentDescription="@string/session_location_icon"
                        app:srcCompat="@drawable/ic_location_on_black_24dp" />

                    <TextView
                        android:id="@+id/salleC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/layout_margin_large"
                        android:layout_marginStart="@dimen/layout_margin_large"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_large"
                        tools:text="salle du cour :" />
                    <TextView
                        android:id="@+id/salle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/layout_margin_large"
                        android:layout_marginStart="@dimen/layout_margin_large"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_large"
                        tools:text="salle" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>