<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/session_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin_medium"
        android:background="@drawable/rectangle">

        <LinearLayout
            android:id="@+id/session_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/titleLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_medium"
                android:background="@color/textcolor"
                android:orientation="vertical"
                android:padding="@dimen/padding_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/padding_medium"
                        android:text="Classe :"
                        android:textColor="#FFF"
                        android:textSize="@dimen/heading_text_size"
                        android:textStyle="bold"
                        tools:text="Classe :" />


                    <TextView
                        android:id="@+id/session_bookmark_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/session_bookmark_status"
                        android:padding="@dimen/padding_medium"
                        android:text="2017/2018"
                        android:textColor="@color/base_chatter_view_background"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/ClassC"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin_large"
                    android:layout_marginStart="@dimen/layout_margin_large"
                    android:layout_weight="1"
                    android:text="Classe :"
                    android:textColor="#FFF"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/base_chatter_view_background"
                android:orientation="vertical"
                android:padding="@dimen/padding_medium">

                <TextView
                    android:id="@+id/session_subtitle"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:visibility="gone"
                    tools:text="Session Subtitle" />


                <!-- matiere -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/item_image_view_small"
                        android:layout_height="@dimen/item_image_view_small"
                        android:contentDescription="@string/session_clock_icon"
                        app:srcCompat="@drawable/book1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/layout_margin_large"
                        android:layout_marginStart="@dimen/layout_margin_large"
                        android:layout_weight="1"
                        android:text="Matiére :"
                        android:textColor="#FF212121"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/matiere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="S1"
                        android:textColor="#FF212121"
                        android:textSize="14sp" />
                </LinearLayout>
                <!-- Prof -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/item_image_view_small"
                        android:layout_height="@dimen/item_image_view_small"
                        android:contentDescription="@string/session_clock_icon"
                        app:srcCompat="@drawable/ic_speaker_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/layout_margin_large"
                        android:layout_marginStart="@dimen/layout_margin_large"
                        android:layout_weight="1"
                        android:text="prof de matiére :"
                        android:textColor="#FF212121"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/prof"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="S1"
                        android:textColor="#FF212121"
                        android:textSize="14sp" />
                </LinearLayout>

                <!-- Date debut -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/item_image_view_small"
                        android:layout_height="@dimen/item_image_view_small"
                        android:contentDescription="@string/session_clock_icon"
                        app:srcCompat="@drawable/ic_schedule_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/layout_margin_large"
                        android:layout_marginStart="@dimen/layout_margin_large"
                        android:layout_weight="1"
                        android:text="la séance commence :"
                        android:textColor="#FF212121"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="S1"
                        android:textColor="#FF212121"
                        android:textSize="14sp" />
                </LinearLayout>
                <!-- Date Sortie -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/item_image_view_small"
                        android:layout_height="@dimen/item_image_view_small"
                        android:contentDescription="@string/session_clock_icon"
                        app:srcCompat="@drawable/ic_schedule_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/layout_margin_large"
                        android:layout_marginStart="@dimen/layout_margin_large"
                        android:layout_weight="1"
                        android:text="Jusqu'a :"
                        android:textColor="#FF212121"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="S1"
                        android:textColor="#FF212121"
                        android:textSize="14sp" />
                </LinearLayout>

                <!--  Salle -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_location"
                        android:layout_width="@dimen/item_image_view_small"
                        android:layout_height="@dimen/item_image_view_small"
                        android:contentDescription="@string/session_location_icon"
                        app:srcCompat="@drawable/ic_location_on_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/layout_margin_large"
                        android:layout_marginStart="@dimen/layout_margin_large"
                        android:layout_weight="1"
                        android:text="Salle n° :"
                        android:textColor="#FF212121"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/salle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="S1"
                        android:textColor="#FF212121"
                        android:textSize="14sp" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>